# timbr_python_connector

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  NOTICE  README.md  SECURITY.md  example JDBC.py  example.py  export ontology.py  pandas_example.py  pandas_example_JDBC.py  pyproject.toml  requirements.txt  setup.py  timbr_connector.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: install-dependencies-and-run-tests.yml
PyTimbr/: timbr_connector.py  timbr_jdbapi.py
examples/: example.py  example_JDBC.py  pandas_example.py  pandas_example_JDBC.py
pytimbr/: __init__.py  timbr_connector.py  timbr_jdbapi.py
test/: conftest.py  requirements.txt  test_connection.py  test_connection_using_pandas.py  test_legacy_connection.py  utils.py
timbr/: __init__.py  timbr_connector.py
timbr_python_connector/: __init__.py  timbr_connector.py
