[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytimbr"
version = "2.0.0"
description = "Timbr Python connector"
readme = "README.md"
license = "MIT"
authors = [
  {name = "timbr", email = "contact@timbr.ai"}
]
keywords = [
  "timbr",
  "timbr-python",
  "timbr-connector",
  "python-connector",
  "PyTimbr",
  "pytimbr",
  "py-timbr",
  "Py-Timbr"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.9"
dependencies = [
  "JPype1==1.5.1",
  "pandas==1.3.5",
  "numpy==1.26.4"
]

[project.urls]
Homepage = "https://github.com/WPSemantix/timbr_python_connector"
Download = "https://github.com/WPSemantix/timbr_python_connector/releases"
"Bug Tracker" = "https://github.com/WPSemantix/timbr_python_connector/issues"
Repository = "https://github.com/WPSemantix/timbr_python_connector"
Documentation = "https://github.com/WPSemantix/timbr_python_connector#readme"

[tool.setuptools.packages.find]
include = ["pytimbr*"]

[tool.setuptools.package-data]
pytimbr = ["jars/*"]
